# hr-vacancy-analytics-mas

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
db/: README.md  create_tables.py  data_acces.py  data_access.py
db/create/: 001_create_vacancy_activity.sql
db/init/: 001_create_vacancy_activity.sql
db/scripts/: connection.py  core.py  credentials.py  init_db.py
src/hr_vacancy_analytics/: main.py
src/hr_vacancy_analytics/agent/: service.py
src/hr_vacancy_analytics/api/schemas/: query.py
src/hr_vacancy_analytics/api/v1/: router.py
src/hr_vacancy_analytics/api/v1/endpoints/: query.py
src/hr_vacancy_analytics/db/: README.md  data_access.py  init_tables.py
src/hr_vacancy_analytics/db/insert/: 001_insert_vacancy_activity.sql
src/hr_vacancy_analytics/db/scripts/: credentials.py  prod.py
